--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,10 +3,10 @@ name: Release
 on:
   workflow_dispatch:
   push:
-  #   paths:
-  #   - NextValue/*
+    paths:
+     - NextValue/*
     branches:
-    - "feature/release-pipline"
+    - "main"
 
 env:
   VERSION_NUMBER: ${{ format('0.0.{0}{1}', github.run_number, github.ref != 'refs/heads/main' && '-preview' || '')}}
@@ -14,7 +14,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    permissions: write-all
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET Core SDK
