--- a/NextValue/NextValue.csproj
+++ b/NextValue/NextValue.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>NextValues</RootNamespace>
   </PropertyGroup>
 
 </Project>
