--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,9 @@ jobs:
     permissions:
       contents: write
       packages: write
+      pull-requests: write
+      statuses: write
+      checks: write
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET Core SDK
@@ -33,8 +36,24 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: "test-results.trx"
-          path: test-results
-        # Use always() to always run this step to publish test results when there are test failures
+          path: test-results/test-results.trx
+        if: ${{ always() }}
+      - name: Test Summary
+        uses: im-open/process-dotnet-test-results@v2.3.4
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          base-directory: './test-results'
+          create-status-check: true
+          create-results-file: true
+          create-pr-comment: false
+          update-comment-if-one-exists: false 
+          comment-identifier: 'unit-tests'
+        if: always()
+      - name: Upload test summary
+        uses: actions/upload-artifact@v3
+        with:
+          name: "test-results.md"
+          path: test-results.md
         if: ${{ always() }}
       - name: Package
         run: dotnet pack NextValue/NextValue.csproj --configuration Release --no-restore -o ./package --p:Version=${{env.VERSION_NUMBER}}
