--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,12 +6,14 @@ on:
   pull_request:
     branches:
     - main
-
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    permissions: 
+      pull-requests: write
+      statuses: write
+      checks: write
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET Core SDK
@@ -28,6 +30,12 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: "test-results.trx"
-          path: test-results
-        # Use always() to always run this step to publish test results when there are test failures
+          path: test-results/test-results.trx
+        if: ${{ always() }}
+      - name: Test summary
+        uses: dorny/test-reporter@v1
+        with:
+          name: "Unit Tests"                  
+          path: 'test-results/test-results.trx'
+          reporter: dotnet-trx
         if: ${{ always() }}
