--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,9 @@ jobs:
     permissions:
       contents: write
       packages: write
+      pull-requests: write
+      statuses: write
+      checks: write
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET Core SDK
@@ -33,8 +36,22 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: "test-results.trx"
-          path: test-results
-        # Use always() to always run this step to publish test results when there are test failures
+          path: test-results/test-results.trx
+        if: ${{ always() }}
+      - name: Test summary
+        uses: dorny/test-reporter@v1
+        with:
+          artifact: test-results
+          name: "Unit Tests"                  
+          path: 'test-results.trx'
+          reporter: dotnet-trx
+        if: ${{ always() }}
+      - name: Test summary
+        uses: dorny/test-reporter@v1
+        with:
+          name: "Unit Tests"                  
+          path: 'test-results/test-results.trx'
+          reporter: dotnet-trx
         if: ${{ always() }}
       - name: Package
         run: dotnet pack NextValue/NextValue.csproj --configuration Release --no-restore -o ./package --p:Version=${{env.VERSION_NUMBER}}
